--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutterassignment
 
 description: Kgp2 SS Flutter Development Internship Assignment.
-  Expected to create a demo app which contains 2 features - 
+  Expected to create a demo app which contains 2 features -
   1. Verify bad(Profanity) words when ever you are typing on textfield.
   2. Verify nudity content of Images.
 
@@ -19,6 +19,10 @@ dependencies:
   fontresoft:
     git:
       url: git@github.com:kenresoft/fontresoft.git
+      ref: master
+  private_keys:
+    git:
+      url: git@github.com:kenresoft/private_keys.git
       ref: master
   cupertino_icons: ^1.0.5
   go_router: ^6.5.3
